--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^5.0.2"
+  },
+  "dependencies": {
+    "bulma": "^0.7.5",
+    "electron-reload": "^1.4.0",
+    "papaparse": "^5.0.0"
   }
 }
